--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.1
+  web_socket_channel: ^2.1.0
   animated_splash_screen: ^1.1.0
   flutter_spinkit: ^5.0.0
   sqflite: 2.0.1
@@ -19,9 +20,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-flutter: 
-  assets: 
-    - assets/icons/
+flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/
 
 
