--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 .buildlog/
 .history
 .svn/
-lib/app/config/messages/app_message.dart
+.lib/app/config/messages/app_message.dart
 
 # IntelliJ related
 *.iml
