--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 .buildlog/
 .history
 .svn/
-Details.txt
 # IntelliJ related
 *.iml
 *.ipr
@@ -19,6 +18,7 @@ Details.txt
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
+Details.txt
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -44,3 +44,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/key.properties
+/android/app/wallet_online.jks
+/Details.txt
