--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wallet_online.wallet_online">
-    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="Wallet Online"
         android:icon="@mipmap/app_icon">
@@ -27,8 +26,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-       <meta-data
+       <!--meta-data
            android:name="com.google.android.gms.ads.APPLICATION_ID"
-           android:value="ca-app-pub-6432329189323370~6155318037"/>
+           android:value="ca-app-pub-6432329189323370~6155318037"/-->
     </application>
 </manifest>
