--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-       <!--meta-data
+       <meta-data
            android:name="com.google.android.gms.ads.APPLICATION_ID"
-           android:value="ca-app-pub-6432329189323370~6155318037"/-->
+           android:value="ca-app-pub-6432329189323370~6155318037"/>
     </application>
 </manifest>
