--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,29 +5,24 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies: 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   get: 4.6.1
-  animated_splash_screen: ^1.1.0
-  flutter_spinkit: ^5.0.0
+  animated_splash_screen: 1.1.0
+  flutter_spinkit: ^5.1.0
   sqflite: 2.0.1
   fl_chart: 0.40.6
   intl: 0.17.0
-  flutter:
+  connectivity: 3.0.6
+  google_mobile_ads: 1.0.1
+  flutter: 
     sdk: flutter
 
-dev_dependencies:
-  flutter_launcher_icons: ^0.9.0
-  flutter_test:
+dev_dependencies: 
+  flutter_test: 
     sdk: flutter
 
-flutter_icons:
-  android: "app_icon_round"
-  ios: true
-  image_path: "assets/icons/app_icon_round.png"
-
-flutter:
-  uses-material-design: true
-  assets:
+flutter: 
+  assets: 
     - assets/icons/
-
+  uses-material-design: true
 
