--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,10 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies: 
-  cupertino_icons: ^1.0.4
+  cupertino_icons: 1.0.4
   get: 4.6.1
   animated_splash_screen: 1.1.0
-  flutter_spinkit: ^5.1.0
+  flutter_spinkit: 5.1.0
   sqflite: 2.0.1
   fl_chart: 0.40.6
   intl: 0.17.0
